--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <!--                                            <p>-->
               <!--                                                Heb je onlangs een waarschuwing gekregen en vind je deze onterecht?-->
               <!--                                                Door hier onder op de knop te drukken sturen we je door naar het formulier waar jij je waarschuwing kunt aanvechten.<br /><br />-->
-              <!--												<a href="//roerveen.nl/unwarn" class="btn btn-mod btn-medium btn-round mb-xs-10">Unwarn-formulier</a>-->
+              <!--												<a href="https://forms.gle/Xw5LsQk5cLqJqpAM9" class="btn btn-mod btn-medium btn-round mb-xs-10">Unwarn-formulier</a>-->
               <!--												</p>-->
               <!--                                        </blockquote>-->
               <!--                                    </div>-->
@@ -236,26 +236,7 @@
               </div>
               <!-- End Service Item -->
 
-              <!-- Service Item -->
-              <!--                        <div class="tab-pane fade" id="service-intake">-->
-              <!---->
-              <!--                            <div class="section-text">-->
-              <!--                                <div class="row">-->
-              <!--                                    <div class="col-md-12 mb-md-40 mb-xs-30">-->
-              <!--                                        <blockquote class="mb-0">-->
-              <!--                                            <p>-->
-              <!--                                                Wil je graag op Roerveen Roleplay kunnen spelen? Door hier onder op de knop te drukken sturen we je door naar het formulier waar jij je intake kunt doen.-->
-              <!--                                                <br /><br />-->
-              <!--                                                <a href="//roerveen.nl/intake" class="btn btn-mod btn-medium btn-round mb-xs-10">Intake-formulier</a>-->
-              <!--                                            </p>-->
-              <!--                                        </blockquote>-->
-              <!--                                    </div>-->
-              <!--                                </div>-->
-              <!--                            </div>-->
-              <!---->
-              <!--                        </div>-->
-              <!-- End Service Item -->
-
+            
               <!-- Service Item -->
               <div class="tab-pane fade" id="service-graphic">
 
@@ -266,7 +247,7 @@
                                   <p>
                                       Heb jij een eigen YouTube-kanaal, Twitch-kanaal of een ander platform waarvoor jij graag content wilt maken vanuit Middelburg?
                                       Om content creator te worden vragen we je om dit formulier in te vullen!<br><br>
-                                      <a href="//roerveen.nl/creator" class="btn btn-mod btn-medium btn-round mb-xs-10">Word Content Creator</a>
+                                      <a href="https://forms.gle/bJwQ6r3V8EJx8rmN9" class="btn btn-mod btn-medium btn-round mb-xs-10">Word Content Creator</a>
                                   </p>
                               </blockquote>
                           </div>
